[tool.poetry]
name = "kd-metals-swc"
version = "0.1.0"
description = "Repository with the code for the analysis of the manuscript Fine metal-rich aeorosols from intensive farming and urban pollution promote Kawasaki disease outbreaks."
authors = ["Alejandro Fontal <alejandro.fontal.92@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
scipy = "^1.8.1"
numpy = "^1.22.4"
pandas = "^1.4.2"
plotnine = "^0.9.0"
statsmodels = "^0.13.2"
dabest = "^0.3.1"
PySPLIT = "^0.3.6"
Shapely = "^1.8.2"
geopandas = "^0.10.2"
basemap = "^1.3.3"
Cartopy = "^0.20.2"
openpyxl = "^3.0.10"
pygeos = "^0.12.0"
rpy2 = "^3.5.2"
geopy = "^2.2.0"
pyts = "^0.12.0"
prophet = "^1.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
